2006-12-12  Akim Demaille  <demaille@gostai.com>

	Return access to members by reference, not pointers
	* src/uconnection.hh (recvQueue): Return a reference, to make
	it clear the ownership is not given away.
	* src/console.cc, src/userver.cc: Adjust.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Fix the previous checkin
	* src/uconnection.cc: Propagate the fact that queues are no
	longer pointers.
	* src/uvalue.cc: Ditto.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Aggregate UQueues in UConnection
	* src/uconnection.cc, src/uconnection.hh: Here.
	Adjust ctor and dtor.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	message for warnings
	* src/uconnection.cc (error_message): Rename as...
	(message): this.
	(message): New overloaded version for warnings.
	(UConnection::warning): Use it.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	error_message
	* src/uconnection.cc (error_message): New.
	Handle UERROR_MEMORY_WARNING.
	(UConnection::error): Use it, it was extracted from here.
	Simplify.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/uconnection.cc, src/uobject.cc: Here.

2006-12-12  Razik Yousfi  <yousfi@gostai.com>

	Remove useless attributes.
	* src/uvariablename.hh: Remove useless attributes.
	* src/uvariablename.cc: Use local variables.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Don't be afraid to pass static strings to send
	* src/uexpression.cc: here, instead of first saving them
	in errorString.
	Remove one definition of errorString that is now useless.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/uexpression.cc: Also, reduce some scopes.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Remove unused attribute
	* src/ucommand.hh (hmi): Remove.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Simplify the logic of UCommand_LOAD::execute
	* src/ucommand.cc: here.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	UParser::*_type