@@ -1,5 +1,10 @@
 2006-12-12  Akim Demaille  <demaille@gostai.com>
 
+	Formatting changes
+	* src/uconnection.cc: here.
+
+2006-12-12  Akim Demaille  <demaille@gostai.com>
+
 	Return access to members by reference, not pointers
 	* src/uconnection.hh (recvQueue): Return a reference, to make
 	it clear the ownership is not given away.
